Fix unexpected SVG vertical alignment

--- a/css/mixture.less
+++ b/css/mixture.less
@@ -716,7 +716,7 @@ pre.dbg {
 }
 */
 a svg {
-    vertical-align: text-top;
+    vertical-align: top;
     display: inline-block;
     height: unit(@ini_font_factor * 1.5, rem);
     width: unit(@ini_font_factor * 1.5, rem);
